--- a/style.css
+++ b/style.css
@@ -1,2 +1,157 @@
 /* Font links */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+    background-color: var(--prm-acc1);
+
+    padding: 4rem 0;
+}
+
+.container {
+    margin: 0 auto;
+    width: 70rem;
+    height: 35rem;
+}
+
+/* Left Side */
+#form-wrapper {
+    background-image: url("images/bg-intro-desktop.png");
+    font-family: var(--prm-ff);
+    font-size: 1rem;
+
+    height: 100%;
+    gap: 0 12rem;
+
+    display: flex;
+    align-items: center;
+}
+
+#learn-code {
+    /* border: dotted 1px lightblue; */
+    color: white;
+
+    width: 33rem;
+}
+
+#learn-code p:nth-child(1) {
+    font-weight: 700;
+    font-size: 3.5rem;
+
+    margin-bottom: 2rem;
+    line-height: 3.5rem;
+}
+
+#learn-code p:nth-child(2) {
+    font-weight: 500;
+    font-size: 1rem;
+
+    line-height: 1.5rem;
+}
+
+/* Right Side */
+#sbs-form-wrapper {
+    width: 33rem;
+}
+
+.banner {
+    box-shadow: 0px 10px 0px 0px rgba(0, 0, 0, 0.1);
+    background-color: var(--prm-acc3);
+    border-radius: 0.625rem;
+    color: white;
+
+    margin-bottom: 1.5rem;
+    height: 3.75rem;
+    line-height: 3.75rem;
+    text-align: center;
+}
+
+#sbs-form-wrapper #try-it-free {
+    font-weight: 600;
+}
+
+#sbs-form-content {
+    background-color: white;
+    box-shadow: 0px 10px 0px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 0.625rem;
+
+    padding: 2rem;
+}
+
+#sbs-form {
+    gap: 1.2rem;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.sbs-section input {
+    border: solid 1px #DEDEDE;
+    border-radius: 0.3rem;
+
+    width: 100%;
+    height: 3.5rem;
+}
+
+.sbs-section input::placeholder {
+    font-weight: 600;
+    text-indent: 10%;
+}
+
+#claim {
+    background-color: var(--prm-acc2);
+    box-shadow: inset 0px -4px 0px 0px rgba(0, 0, 0, 0.1);
+    font-weight: 500;
+
+    margin-top: 1.2rem;
+}
+
+#terms-and-services {
+    color: #BAB7D4;
+    font-size: 0.6rem;
+
+    text-align: center;
+}
+
+#terms-and-services span {
+    color: #FF7979;
+    font-weight: 700;
+}
+
+/* Left Side MQ */
+@media (max-width: 431px) {
+    body {
+        background-image: url("images/bg-intro-mobile.png");
+    }
+
+    .container {
+        width: 90%;
+    }
+
+    #form-wrapper {
+        flex-wrap: wrap;
+    }
+
+    #learn-code p:nth-child(1) {
+        font-size: 1.75rem;
+
+        line-height: 2.25rem;
+        margin-bottom: 0.5rem;
+    }
+
+    #learn-code p:nth-child(2) {
+        margin-bottom: 2rem;
+    }
+
+    #sbs-form-content {
+        margin-bottom: 4rem;
+    }
+
+    #sbs-form-wrapper>p:first-child {
+        height: 5.5rem;
+        line-height: 1.625rem;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
